<resources>
    <string name="app_name">Bigmans Pizza</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_home">Home</string>
    <string name="action_my_orders">My Orders</string>
    <string name="action_profile">Profile</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_share_app">Share App</string>
    <string name="social_media">Follow us on social media</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_instagram">Instagram</string>
    <string name="delivery_time">Estimated Delivery Time: 30 - 40 minutes</string>
    <string name="delivery_charges">Delivery Charges: 50 Rs</string>
    <string name="delivery_hours">Delivery hours: 8am to 10pm</string>
    <string name="banner_text">Free Delivery on Order above: Rs 1000</string>
    <string name="bakery_item_cake">Cake</string>
    <string name="bakery_item_mithai">Mithai</string>
    <string name="bakery_item_baverage">Baverage</string>
</resources>
